--- a/css/style.scss
+++ b/css/style.scss
@@ -1,29 +1,5 @@
-* {
-	//border: 1px red dashed;
-}
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&subset=cyrillic-ext';
-@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
-$color_white: #fff;
-$color_lightgray: #ccc;
-$color_gray: #b1b1b1;
-
-//try to add :target to the collapse!!!!!
-
-$color_gray2: #ebebeb;
-$color_gray3: #999;
-$color_gray4: #666;
-$color_gray5: #e5e5e5;
-$color_gray6: #333;
-$color_darkgray: #6a6969;
-$color_almostblack: #2b2a29;
-$color_green: #008e46;
-//$color_darkgreen: #008e46;
-$color_lightgreen: #40ab3d;
-$color_lime: #9ec538;
-$color_black: #000;
-$color_lightblack: #1e1d1c;
-$color_yellow: #fecc00;
-$max-width: 1200px;
+@import '_variables.scss';
+@import '_form.scss';
 
 a {
 	color: #008e46;
@@ -693,9 +669,12 @@ body {
 		}
 	}
 }
-
-        
+   
 table { 
 	border-spacing: 0;
 	border-collapse: collapse;
+}
+
+.other:selected {
+	//background: red;
 }
