--- a/css/_form.scss
+++ b/css/_form.scss
@@ -1,4 +1,9 @@
+* {
+	//border: 1px red dashed;
+}
 .form {
+			background: $color_gray5;
+
 	h6,
 	label {
 		margin: 0 0 10px;
@@ -13,10 +18,66 @@
 			margin: 0;
 		}
 	}
-	input[type="text"] {
+	.form_list {
+		padding: 20px 0;
+		list-style: none;
+		
+		li {
+			list-style: none;
+			
+			ul {
+				padding: 0;
+			}
+			.hint {
+				position: relative;
+				display: inline-block;
+				width: 20px;
+				height: 20px;
+				
+				&:before {
+					content: "?";
+					display: block;
+					width: 20px;
+					height: 20px;
+					background: $color_white;
+					border: 1px solid $color_gray3;
+					border-radius: 50%;
+					text-align: center;
+					font-size: 17px;
+				}
+				&:after {
+					content: attr(data-tooltip);
+					display: none;
+					position: absolute;
+					top: 4px;
+					left: 20px;
+					z-index: 1;
+					padding: 5px;
+					width: 250px;
+					background: $color_white;
+					border: 1px solid $color_gray3;
+				}
+				&:hover {
+					&:after {
+						display: block;
+					}
+					}
+			}
+			&.link {
+				padding: 10px 0;
+			}
+		}
+	}
+	input[type="text"],
+	input[type="email"],
+	input[type="url"],
+	textarea {
 		width: 100%;
 		height: 35px;
 		border: none;
+	}
+	textarea {
+		height: 90px;
 	}
 	.select-style {
 		position: relative;
@@ -63,10 +124,11 @@
 		}
 	}
 	.radio_field {
+		overflow: hidden;
+		max-width: 180px;
 		padding: 0;
 		
 		li {
-			//display: inline-block;
 			float: left;
 			width: 50%;
 			list-style: none;
@@ -244,5 +306,27 @@
 	}
 	input[type=range]:focus::-ms-fill-upper {
 		background: red !important;
+	}
+	//other
+	.other {
+		display: block;
+		
+		[type="checkbox"] {
+			+ textarea {
+				display: none;
+				margin-top: 10px;
+			}
+			&:checked + textarea {
+				display: block;
+			}
+		}
+	}
+	.ifchecked [type="checkbox"] {
+		+ span {
+			display: none;
+		}
+		&:checked + span {
+			display: inline-block;
+		}
 	}
 }
