--- a/css/_form.scss
+++ b/css/_form.scss
@@ -172,9 +172,10 @@
 			top: 15px;
 			width: 100%;
 			outline: none;
-			height: 18px;
+			height: 20px;
 			margin: 0;
 			padding: 0;
+			background: none;
 			
 			&::-webkit-slider-thumb {
 				pointer-events: all;
@@ -183,8 +184,16 @@
 				outline: 0;
 			}
 		}
+		&:after {
+			content: "";
+			position: absolute;
+			top: 19px;
+			left: 0;
+			width: 100%;
+			height: 10px;
+			background: $color_white;
+		}
 	}
-
 	section.range-slider input::-moz-range-thumb {
 		pointer-events: all;
 		position: relative;
