--- a/css/search.css
+++ b/css/search.css
@@ -240,83 +240,17 @@
     background: orange !important; }
   .form input[type=range]:focus::-ms-fill-upper {
     background: red !important; }
-  .form input[type=range] {
-    -webkit-appearance: none;
-    margin: 10px 0;
-    width: 100%; }
-  .form input[type=range]:focus {
-    outline: none; }
-  .form input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 12.8px;
-    cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #ac51b5;
-    border-radius: 25px;
-    border: 0px solid #000101; }
-  .form input[type=range]::-webkit-slider-thumb {
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    border: 0px solid #000000;
-    height: 20px;
-    width: 39px;
-    border-radius: 7px;
-    background: #65001c;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -3.6px; }
-  .form input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #ac51b5; }
   .form input[type=range]::-moz-range-track {
     width: 100%;
-    height: 12.8px;
+    height: 0px;
     cursor: pointer;
-    animate: 0.2s;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    background: #ac51b5;
-    border-radius: 25px;
-    border: 0px solid #000101; }
+    animate: 0.2s; }
   .form input[type=range]::-moz-range-thumb {
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    border: 0px solid #000000;
     height: 20px;
     width: 39px;
-    border-radius: 7px;
-    background: #65001c;
+    background: #ebebeb;
+    border: 1px solid #ccc;
     cursor: pointer; }
-  .form input[type=range]::-ms-track {
-    width: 100%;
-    height: 12.8px;
-    cursor: pointer;
-    animate: 0.2s;
-    background: transparent;
-    border-color: transparent;
-    border-width: 39px 0;
-    color: transparent; }
-  .form input[type=range]::-ms-fill-lower {
-    background: #ac51b5;
-    border: 0px solid #000101;
-    border-radius: 50px;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d; }
-  .form input[type=range]::-ms-fill-upper {
-    background: #ac51b5;
-    border: 0px solid #000101;
-    border-radius: 50px;
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d; }
-  .form input[type=range]::-ms-thumb {
-    box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-    border: 0px solid #000000;
-    height: 20px;
-    width: 39px;
-    border-radius: 7px;
-    background: #65001c;
-    cursor: pointer; }
-  .form input[type=range]:focus::-ms-fill-lower {
-    background: #ac51b5; }
-  .form input[type=range]:focus::-ms-fill-upper {
-    background: #ac51b5; }
-  .form body {
-    padding: 30px; }
   .form .other {
     display: block; }
     .form .other [type="checkbox"] + textarea {
